kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackaton-soat-manager
  labels:
    name: hackaton-soat-manager
