kubernetes/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hackaton-soat-manager-route
  namespace: hackaton-soat-manager
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
      kind: Gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /manager
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /api/
      backendRefs:
        - name: hackaton-soat-manager-service
          port: 8080
          weight: 100

      timeouts:
        request: 30s
